--- a/components/experiences/Experiences.module.scss
+++ b/components/experiences/Experiences.module.scss
@@ -76,7 +76,7 @@
   width: 100%;
   height: 42px;
   padding: 0 20px 2px;
-  font-size: 13px;
+  font-size: var(--smallfs);
   text-align: left;
   text-decoration: none;
   text-decoration-skip-ink: auto;
