restructure files and folders
misplaced some folder in a more conventional format. Also added scrollreveal and react-transition-group and custom hook from react-portfolio

--- a/components/hero-section/HeroSection.module.scss
+++ b/components/hero-section/HeroSection.module.scss
@@ -1,5 +1,11 @@
 .heroSection {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
+  overflow: hidden;
+  color: #fff;
   text-transform: uppercase;
   text-align: center;
   line-height: 1.5;
@@ -12,11 +18,6 @@
   -webkit-filter: grayscale(59%); /* Safari 6.0 - 9.0 */
   filter: grayscale(59%);
   background-color: var(--blue);
-  overflow: hidden;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
   div {
     top: -1rem;
@@ -45,7 +46,6 @@
     border-radius: 5px;
     font-size: 1.2rem;
     font-weight: 700;
-    cursor: pointer;
     display: inline-block;
     filter: grayscale(0%) !important;
     &:hover {
@@ -56,6 +56,28 @@
   }
 }
 
+.quickLinks {
+  position: fixed;
+  right: 1.5rem;
+  top: 43vh;
+  bottom: 0;
+  justify-content: center;
+  align-items: center;
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: var(--largefs);
+    margin-bottom: 1rem;
+
+    svg {
+      color: var(--white);
+      transition: all 650ms ease-in-out;
+    }
+  }
+}
 @media screen and (max-width: 768px) {
   .heroSection {
     padding: 0 0 50px 0;
@@ -70,6 +92,9 @@
     h2 {
       font-size: 2.9rem;
     }
+  }
+  .quickLinks {
+    display: none;
   }
 }
 
