--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,6 @@
     rgba(227, 242, 253) 0%,
     rgba(13, 71, 161) 100%
   );
-
   --smallerfs: 0.75rem;
   --smallfs: 0.875rem;
   --fs: 1rem;
@@ -21,6 +20,7 @@
   --xlargefs: 1.375rem;
   --xxlargefs: 1.5rem;
   --pdDivider: 80px 0;
+  --footerHeight: 118px;
 }
 
 * {
