--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  min-height: calc(100vh - 98px);
+  min-height: calc(100vh - var(--footerHeight));
   background: var(--blue);
   h1 {
     font-size: 150px;
@@ -11,6 +11,23 @@
   }
   h4 {
     font-size: 30px;
+  }
+  button {
+    margin-top: 15px;
+    background: var(--blue);
+    color: var(--white);
+    padding: 16px 24px;
+    border: 2px solid var(--white);
+    border-radius: 5px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    display: inline-block;
+    filter: grayscale(0%) !important;
+    &:hover {
+      background-color: var(--white);
+      color: var(--blue);
+      font-weight: 900;
+    }
   }
 }
 
